Fix card spacing

--- a/static/css/swizzin.css
+++ b/static/css/swizzin.css
@@ -1,3 +1,7 @@
+.card-columns .card {
+  margin-bottom: 0;
+}
+
 a[post=true] {
   cursor: pointer;
 }
